--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "node --watch src/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/alicecustodiodecarvalho/api-bke-express/issues"
   },
-  "homepage": "https://github.com/alicecustodiodecarvalho/api-bke-express#readme"
+  "homepage": "https://github.com/alicecustodiodecarvalho/api-bke-express#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
