--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/alicecustodiodecarvalho/api-bke-express#readme",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
